objects/User_Time_Record__c.object
<CustomObject>
    <fields>
        <fullName>Flow_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox is used to identify is a record was created by a Flow or manually. Not present on any page layout. 
Rustam 08.2020</description>
        <label>Flow Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Time__c</fullName>
        <inlineHelpText>Time when break starts.</inlineHelpText>
        <label>In Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Out_Time__c</fullName>
        <inlineHelpText>Time when break ends.</inlineHelpText>
        <label>Out Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Slot__c</fullName>
        <formula>IF ( AND (
          HOUR (In_Time__c)  &lt; 13,   
          HOUR (Out_Time__c) &lt; 13),  
    (LEFT (TEXT (In_Time__c), 5) &amp; &apos; - &apos; &amp; LEFT (TEXT (Out_Time__c), 5)),

IF ( AND (
          HOUR (In_Time__c)  &lt; 13,
          HOUR (Out_Time__c) &gt; 12),

    TEXT (HOUR (In_Time__c)) &amp; &apos;:&apos; &amp; TEXT (MINUTE (In_Time__c)) &amp; &apos; - &apos; &amp;
    TEXT (HOUR (Out_Time__c) - 12) &amp; &apos;:&apos; &amp; TEXT (MINUTE (Out_Time__c)),

    TEXT (HOUR (In_Time__c)  - 12) &amp; &apos;:&apos; &amp; TEXT (MINUTE (In_Time__c)) &amp; &apos; - &apos; &amp;
    TEXT (HOUR (Out_Time__c) - 12) &amp; &apos;:&apos; &amp; TEXT (MINUTE (Out_Time__c))
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Break time slot.</inlineHelpText>
        <label>Slot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <inlineHelpText>Type of the break.</inlineHelpText>
        <label>Task</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <formula>CASESAFEID(User__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>User__r.FirstName &amp; &quot; &quot; &amp; User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the User owning this break.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Time_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Time Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task__c</columns>
        <columns>User__c</columns>
        <columns>User_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>In_Time__c</columns>
        <columns>Out_Time__c</columns>
        <columns>Slot__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Time Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>